--- a/DuCr.css
+++ b/DuCr.css
@@ -6,6 +6,19 @@
     text-align:center;
     font-family: 'Fondamento';
     font-size: 50px;
+    color:#e5a912;
+    text-shadow:4px 4px #161616;
+}
+.Subtitle {
+    margin:20px;
+    margin-top:0px;
+    border:0px;
+    padding:0px;
+    text-align:center;
+    font-family:Fondamento;
+    font-size: 28px;
+    color:#e5a912;
+    text-shadow:3px 3px #161616;
 }
 .MenuText {
     margin:0px;
@@ -34,6 +47,8 @@
     text-align:center;
     font-family: 'Fondamento';
     font-size:14px;
+    color:#e5a912;
+    text-shadow:2px 2px #161616;
 }
 .input {
     height:50px;
